--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Plotly = "58dd65bb-95f3-509e-9936-c39a10fdeae7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
